feat(budget): melhorias na feature de planejamento
